# entitlement_recommendation

./: .bedrock_agentcore.yaml  Dockerfile  bedrock-policy.json  entitlement.csv  main.py  pyproject.toml  recommender.py  requirements.txt  task-definition.json
.bedrock_agentcore/entitlement_recommender/: Dockerfile
