[project]
name = "entitlement-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.10",
    "botocore>=1.43.10",
    "fastapi>=0.136.1",
    "langchain-aws>=1.4.7",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.47.0",
]
